@@ -11,6 +11,7 @@ linux (4.19~rc3-1~exp2) UNRELEASED; urgency=medium
   * debian/lib/python: Use raw strings for all regexes
   * debian/control: Fix restrictions for build-deps on asciidoctor and
     patchutils
+  * Add support for specifying build-dependencies in binary package templates
 
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 10 Sep 2018 22:25:53 +0100
 
